--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Design for fabrication and project automation">
 
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <link rel="stylesheet" href="/styles/dct_style.css">
+  <!-- <link rel="stylesheet" href="/styles/dct_style.css"> -->
   <link rel="stylesheet" href="/styles/Style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -26,7 +26,7 @@
         <div class="navbar">
           <div class="logo">
             <picture>
-              <img src="images//logo/decod_button.png" alt="logo">
+              <img src="images/logo/decod_button.png" alt="logo">
             </picture>
           </div>
           <nav class="menu" id="siteNav">
