--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -2,100 +2,127 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Decode Collective</title>
-    <link rel="icon" type="image/png" href="images/logo.svg" sizes="128x128">
-    <meta name="description" content="A selection of work 2017-2020">
+  <meta charset="utf-8">
+  <title>Decode Collective</title>
+  <link rel="icon" type="image/png" href="images/logo.svg" sizes="128x128">
+  <meta name="description" content="A selection of work 2017-2020">
 
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="styles/Style.css">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="styles/Style.css">
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Space Mono' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Space Mono' rel='stylesheet'>
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
 
-    <!-- MAPBOX -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
-    <!-- MAPBOX GEOCODER -->
-    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
-    <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css' type='text/css' />
-    <!-- Promise polyfill script required to use Mapbox GL Geocoder in IE 11 -->
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
-    <!-- MAPBOX TILES-->
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+  <!-- MAPBOX -->
+  <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
+  <!-- MAPBOX GEOCODER -->
+  <script
+    src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
+  <link rel='stylesheet'
+    href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css'
+    type='text/css' />
+  <!-- Promise polyfill script required to use Mapbox GL Geocoder in IE 11 -->
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
+  <!-- MAPBOX TILES-->
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
 </head>
 
 <body>
-    <header>
+  <div class="glitch-wrapper">
+    <div class="glitch" data-text="PROJECTS">PROJECTS</div>
+  </div>
+
+  <section data-title="Decode Creative Technologies Home">   
+    <div class="first-wrapper">     
+      <div class="above-nav"></div>
+      <div class="navParent">
+        <div class="navbar">
+          <div class="logo">
+            <a href="Index.html" class="shadow-pop-tr">
+              <img src="images/logo/decod_button.png" alt="logo">
+            </a>
+          </div>
+          <nav class="menu" id="siteNav">
+            <ul>
+              <!-- <li><a href="Index.html">Home</a></li> -->
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- <header>
         <a href="Index.html" class="shadow-pop-tr"></a>
         <nav class="menu" id="siteNav">
             <ul>
-                <!-- <li><a href="Index.html">Home</a></li> -->
+               
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
-    <button class="project-menu-toggle">       
-            <div class="t1">
-            </div>
-            <div class="t2">
-            </div>
-            <div class="t3">
-            </div>       
-    </button>
-
-    <section class="heading-container">
-        <div class="glitch-wrapper">
-            <div class="glitch" data-text="PROJECTS">PROJECTS</div>
-        </div>
-        <div class="central-container">
-            <!--Make this a grid!!! -->
-            <div class="project-img-container" id="perceptiveDatascapes-project-img">
-                <button class="project-button slide-top">Perceptive Datascapes</button>
-                <p class="project-subtitle"><span class="hor-line"></span> Data Driven Design Apparatus</p>
-            </div>
-        </div>
-        <div class="central-container">
-            <div class="project-img-container" id="rawbot-project-img">
-                <button class="project-button slide-top">Rawbot</button>
-            </div>
-        </div>
-        <div class="central-container">
-            <div class="project-img-container" id="swapper-project-img">
-                <button class="project-button slide-top">Swapper</button>
-            </div>
-        </div>
-        <div class="central-container">
-            <div class="project-img-container" id="urbanGrowth-project-img">
-                <button class="project-button slide-top">Urban Growth</button>
-            </div>
-        </div>
-    </section>
-
-
-    <div class="footer">
-        <div class="scroll-arrow">
-            <div id="cta">
-                <span class="arrow first next "></span>
-                <span class="arrow second next "></span>
-            </div>
-        </div>
-        <h6>Scroll</h6>
+  <button class="project-menu-toggle">
+    <div class="t1">
     </div>
+    <div class="t2">
+    </div>
+    <div class="t3">
+    </div>
+  </button>
+
+  <section class="heading-container">
+
+    <div class="central-container">
+      <!--Make this a grid!!! -->
+      <div class="project-img-container" id="perceptiveDatascapes-project-img">
+        <button class="project-button slide-top">Perceptive Datascapes</button>
+        <p class="project-subtitle"><span class="hor-line"></span> Data Driven Design Apparatus</p>
+      </div>
+    </div>
+    <div class="central-container">
+      <div class="project-img-container" id="rawbot-project-img">
+        <button class="project-button slide-top">Rawbot</button>
+      </div>
+    </div>
+    <div class="central-container">
+      <div class="project-img-container" id="swapper-project-img">
+        <button class="project-button slide-top">Swapper</button>
+      </div>
+    </div>
+    <div class="central-container">
+      <div class="project-img-container" id="urbanGrowth-project-img">
+        <button class="project-button slide-top">Urban Growth</button>
+      </div>
+    </div>
+  </section>
 
 
-    <!-- ----------------- SCRIPTS ----------------- -->
-    <script type="text/javascript" defer src="js/projectsJSElements.js"></script>
+  <div class="footer">
+    <div class="scroll-arrow">
+      <div id="cta">
+        <span class="arrow first next "></span>
+        <span class="arrow second next "></span>
+      </div>
+    </div>
+    <h6>Scroll</h6>
+  </div>
+
+
+  <!-- ----------------- SCRIPTS ----------------- -->
+  <script type="text/javascript" defer src="js/projectsJSElements.js"></script>
 
 </body>
 
