--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -41,8 +41,8 @@
     <div class="glitch" data-text="PROJECTS">PROJECTS</div>
   </div>
 
-  <section data-title="Decode Creative Technologies Home">   
-    <div class="first-wrapper">     
+  <section data-title="Decode Creative Technologies Home">
+    <div class="first-wrapper">
       <div class="above-nav"></div>
       <div class="navParent">
         <div class="navbar">
@@ -60,19 +60,68 @@
           </nav>
         </div>
       </div>
+
+
+      <div class="project-container-grid">
+        <div class="project-img-container" id="perceptiveDatascapes-project-img">
+        </div>
+        <div class="project-container-grid-top"></div>
+        <div class="project-container-grid-mid">
+          <button class="project-button slide-top">Perceptive Datascapes</button>
+        </div>
+        <div class="project-container-grid-bottom">
+          <span class="hor-line"></span>
+          <p class="project-subtitle"> Data Driven Design And Analytics</p>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- <header>
-        <a href="Index.html" class="shadow-pop-tr"></a>
-        <nav class="menu" id="siteNav">
-            <ul>
-               
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header> -->
+  <section>
+    <div class="project-container-grid">
+      <div class="project-img-container" id="rawbot-project-img">
+      </div>
+      <div class="project-container-grid-top"></div>
+      <div class="project-container-grid-mid">
+        <button class="project-button slide-top">Rawbot</button>
+      </div>
+      <div class="project-container-grid-bottom">
+        <span class="hor-line"></span>
+        <p class="project-subtitle"> Augmented Reality (AR) Fabrication Workflow</p>
+      </div>
+    </div>
+  </section>
+
+  <section >
+    <div class="project-container-grid">
+      <div class="project-img-container" id="swapper-project-img">
+      </div>
+      <div class="project-container-grid-top"></div>
+      <div class="project-container-grid-mid">
+        <button class="project-button slide-top">Swapper</button>
+      </div>
+      <div class="project-container-grid-bottom">
+        <span class="hor-line"></span>
+        <p class="project-subtitle">Design Evaluation And Eperimentation For Housing</p>
+      </div>
+    </div>
+  </section>
+
+  <section >
+    <div class="project-container-grid">
+      <div class="project-img-container" id="urbanGrowth-project-img">
+      </div>
+      <div class="project-container-grid-top"></div>
+      <div class="project-container-grid-mid">
+        <button class="project-button slide-top">Urban Growth</button>
+      </div>
+      <div class="project-container-grid-bottom">
+        <span class="hor-line"></span>
+        <p class="project-subtitle">Generative Design Dlgorithm To Explore Potentials Of Urban Growth </p>
+      </div>
+    </div>
+  </section>
+
 
   <button class="project-menu-toggle">
     <div class="t1">
@@ -82,32 +131,6 @@
     <div class="t3">
     </div>
   </button>
-
-  <section class="heading-container">
-
-    <div class="central-container">
-      <!--Make this a grid!!! -->
-      <div class="project-img-container" id="perceptiveDatascapes-project-img">
-        <button class="project-button slide-top">Perceptive Datascapes</button>
-        <p class="project-subtitle"><span class="hor-line"></span> Data Driven Design Apparatus</p>
-      </div>
-    </div>
-    <div class="central-container">
-      <div class="project-img-container" id="rawbot-project-img">
-        <button class="project-button slide-top">Rawbot</button>
-      </div>
-    </div>
-    <div class="central-container">
-      <div class="project-img-container" id="swapper-project-img">
-        <button class="project-button slide-top">Swapper</button>
-      </div>
-    </div>
-    <div class="central-container">
-      <div class="project-img-container" id="urbanGrowth-project-img">
-        <button class="project-button slide-top">Urban Growth</button>
-      </div>
-    </div>
-  </section>
 
 
   <div class="footer">
