--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -99,23 +99,7 @@
             <div class="i"></div>
             <div class="i"></div>
             <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="h">             
-            </div>          
+            <div class="i"></div>     
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
@@ -131,7 +115,43 @@
 
   <section>
     <div class="project-container-grid">
-      <div class="project-img-container" id="rawbot-project-img">
+      <div class="project-img-container w" id="rawbot-project-img">
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>
+        <div class="i-rawbot"></div>     
       </div>
       <div class="project-container-grid-top"></div>
       <div class="project-container-grid-mid">
@@ -147,6 +167,42 @@
   <section >
     <div class="project-container-grid">
       <div class="project-img-container" id="swapper-project-img">
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>
+        <div class="i-swapper"></div>     
       </div>
       <div class="project-container-grid-top"></div>
       <div class="project-container-grid-mid">
