--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -41,29 +41,30 @@
     <div class="glitch" data-text="PROJECTS">PROJECTS</div>
   </div>
 
-  <section data-title="Decode Creative Technologies Home">
-    <div class="first-wrapper">
-      <div class="above-nav"></div>
-      <div class="navParent">
-        <div class="navbar">
-          <div class="logo">
-            <a href="Index.html" class="shadow-pop-tr">
-              <img src="images/logo/decod_button.png" alt="logo">
-            </a>
-          </div>
-          <nav class="menu" id="siteNav">
-            <ul>
-              <!-- <li><a href="Index.html">Home</a></li> -->
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </nav>
+  <div>
+    <!-- <div class="above-nav"></div> -->
+    <div class="navParent">
+      <div class="navbar">
+        <div class="logo">
+          <a href="Index.html" class="shadow-pop-tr">
+            <img src="images/logo/decod_button.png" alt="logo">
+          </a>
         </div>
+        <nav class="menu" id="siteNav">
+          <ul>
+            <!-- <li><a href="Index.html">Home</a></li> -->
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
       </div>
+    </div>
+  </div>
 
-
-      <div class="project-container-grid">
-        <div class="project-img-container w" id="perceptiveDatascapes-project-img">        
+<div  class="scroll-container">
+  <section class="scroll-item" > 
+      <div class="project-container-grid ">
+        <div class="project-img-container " id="perceptiveDatascapes-project-img">        
             <div class="i"></div>
             <div class="i"></div>
             <div class="i"></div>
@@ -83,23 +84,6 @@
             <div class="i"></div>
             <div class="i"></div>
             <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>
-            <div class="i"></div>     
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
@@ -108,14 +92,12 @@
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
           <p class="project-subtitle"> Data Driven Design And Analytics</p>
-        </div>
-      </div>
-    </div>
+        </div>    
   </section>
 
-  <section>
-    <div class="project-container-grid">
-      <div class="project-img-container w" id="rawbot-project-img">
+  <section class="scroll-item">
+    <div class="project-container-grid ">
+      <div class="project-img-container " id="rawbot-project-img">
         <div class="i-rawbot"></div>
         <div class="i-rawbot"></div>
         <div class="i-rawbot"></div>
@@ -135,23 +117,6 @@
         <div class="i-rawbot"></div>
         <div class="i-rawbot"></div>
         <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>
-        <div class="i-rawbot"></div>     
       </div>
       <div class="project-container-grid-top"></div>
       <div class="project-container-grid-mid">
@@ -164,45 +129,10 @@
     </div>
   </section>
 
-  <section >
+  <section class="scroll-item">
     <div class="project-container-grid">
       <div class="project-img-container" id="swapper-project-img">
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>
-        <div class="i-swapper"></div>     
+    
       </div>
       <div class="project-container-grid-top"></div>
       <div class="project-container-grid-mid">
@@ -215,7 +145,7 @@
     </div>
   </section>
 
-  <section >
+  <section class="scroll-item">
     <div class="project-container-grid">
       <div class="project-img-container" id="urbanGrowth-project-img">
       </div>
@@ -229,7 +159,7 @@
       </div>
     </div>
   </section>
-
+</div>
 
   <button class="project-menu-toggle">
     <div class="t1">
