--- a/DecodeCollective/about.html
+++ b/DecodeCollective/about.html
@@ -11,7 +11,15 @@
 
 <body>
 
-<h1>ABOUT</h1>
+  <div class="scroll-container">
+    <div class="scroll-item">
+      <p>Anna</p>
+    </div>
+    <div class="scroll-item">
+      <p>Anna</p>
+    </div>
+  </div>
+  
 </body>
 
 </html>
