--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
 
@@ -33,8 +34,9 @@
             <nav class="menu" id="siteNav">
               <ul>
                 <!-- <li><a href="Index.html">Home</a></li> -->
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="projects.html">Projects.</a></li>
+                <li><a href="projects.html">About.</a></li>
+                <li><a href="contact.html">Contact.</a></li>
               </ul>
             </nav>
           </div>
