--- a/DecodeCollective/about.html
+++ b/DecodeCollective/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <link rel="stylesheet" href="/styles/dct_style.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
 
@@ -19,7 +20,7 @@
       <p>Anna</p>
     </div>
   </div>
-  
+
 </body>
 
 </html>
