--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -154,7 +154,7 @@
       </div>
       <div class="project-container-grid-bottom">
         <span class="hor-line"></span>
-        <p class="project-subtitle">Generative Design Dlgorithm To Explore Potentials Of Urban Growth </p>
+        <p class="project-subtitle">Generative Design Algorithm To Explore Potentials Of Urban Growth </p>
       </div>
     </div>
   </section>
