Fixed nav + bio files

--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -21,10 +21,10 @@
   <div class="scroll-container">
 
     <!-- Landing media -->
-    <section class="scroll-item" data-title="Decode Creative Technologies Home">
-      <div class="first-wrapper">
-        <div class="above-nav"></div>
-        <div class="navParent">
+    <section data-title="Decode Creative Technologies Home">
+      <div class="first-wrapper fixed-nav ">
+        <!-- <div class="above-nav"></div> -->
+        <!-- <div class="navParent"> -->
           <div class="navbar">
             <div class="logo">
               <picture>
@@ -40,7 +40,7 @@
               </ul>
             </nav>
           </div>
-        </div>
+        <!-- </div>  -->
         <div class="scroll_btn">
         </div>
 
@@ -92,6 +92,6 @@
 
 </body>
 <script src="/js/scroll-arrow.js"></script>
-<script src="/js/sticky_nav.js"></script>
+<!--<script src="/js/sticky_nav.js"></script>-->
 
 </html>
