--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -65,7 +65,7 @@
   </div>
 
   <div class="scroll-container">
-    <section class="scroll-item">
+    <section class="scroll-item centralise">
       <div class="project-container-grid ">
         <div class="project-img-container " id="perceptiveDatascapes-project-img">
           <div class="i perceptive-overlay"></div>
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <section class="scroll-item">
+    <section class="scroll-item centralise">
       <div class="project-container-grid ">
         <div class="project-img-container " id="rawbot-project-img">
           <div class="i rawbot-overlay"></div>
@@ -119,8 +119,8 @@
         </div>
       </div>
     </section>
-
-    <section class="scroll-item">
+ 
+    <section class="scroll-item centralise">
       <div class="project-container-grid">
         <div class="project-img-container" id="swapper-project-img">
           <div class="i swapper-overlay"></div>
@@ -148,7 +148,7 @@
       </div>
     </section>
 
-    <section class="scroll-item">
+    <section class="scroll-item centralise">
       <div class="project-container-grid">
         <div class="project-img-container" id="urbanGrowth-project-img">
           <div class="i urbanGrowth-overlay"></div>
@@ -177,21 +177,21 @@
     </section>
   </div>
 
-  <button class="project-menu-toggle">
+  <!-- <button class="project-menu-toggle">
     <div class="t1">
     </div>
     <div class="t2">
     </div>
     <div class="t3">
     </div>   
-  </button>
-
+  </button> -->
+<!-- 
   <div id="project-list" class="hidden overlay">
     <a class="" href="projects/perceptiveDatascapes.html">Perceptive Datascapes</a>
     <a class="" href="projects/">Rawbot</a>
     <a class="" href="projects/">Swapper</a>
     <a class="" href="projects/">Urban Growth</a>
-  </div>
+  </div> -->
  
 
   <div class="footer">
