--- a/DecodeCollective/contact.html
+++ b/DecodeCollective/contact.html
@@ -108,17 +108,21 @@
 
       </div> -->
 
-      <div class="container">   
-        <h2>Athens</h2>     
+      <div class="above-nav">  </div>
+
+      <div class="container">
+        <h2>London</h2>
+        <p>Notting Hill, W11 1BP, London</p>
+        <p>+44 (0)7753967483 &nbsp; / &nbsp; +44 (0)7858509906</p>        
+        <p>creativetechnologies@decodefablab.com</p>
+      </div>
+      <div class="container">
+        <h2>Athens</h2>
         <p>Ag. Thoma 9, Athens, 11527 Greece</p>
         <p>+30 210 64 22 882</p>
         <p>info@decodefablab.com</p>
       </div>
-      <div class="container"> 
-        <h2>London</h2>     
-        <p>Notting Hill, W11 1BP, London</p>
-        <p>+44 (0)7753967483</p>
-        </div>
+
 
     </div>
 
