--- a/DecodeCollective/contact.html
+++ b/DecodeCollective/contact.html
@@ -4,18 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Decode Collective</title>
-  <link rel="icon" type="image/png" href="images/logo.svg" sizes="128x128">
-  <meta name="description" content="A selection of work 2017-2020">
+  <link rel="icon" type="image/png" href="images/logo/decod_button.png" sizes="128x128">
+  <meta name="description" content="Design for fabrication and project automation">
 
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/Style.css">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Space Mono' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
   <!-- MAPBOX -->
