--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -4,37 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Decode Collective</title>
-  <link rel="icon" type="image/png" href="images/logo.svg" sizes="128x128">
-  <meta name="description" content="A selection of work 2017-2020">
+  <link rel="icon" type="image/png" href="images/logo/decod_button.png" sizes="128x128">
+  <meta name="description" content="Design for fabrication and project automation">
 
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles/Style.css">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Work Sans" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Space Mono' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+  <!-- Fonts --> 
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-
-  <!-- MAPBOX -->
-  <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
-  <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
-  <!-- MAPBOX GEOCODER -->
-  <script
-    src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.min.js'></script>
-  <link rel='stylesheet'
-    href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.2.0/mapbox-gl-geocoder.css'
-    type='text/css' />
-  <!-- Promise polyfill script required to use Mapbox GL Geocoder in IE 11 -->
-  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
-  <!-- MAPBOX TILES-->
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-
+ 
 </head>
 
 <body>
