projects page animation trigger events

--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -87,6 +87,16 @@
 
   </div>
 
+  <div class="footer">
+    <div class="scroll-arrow">
+      <div id="cta">
+        <span class="arrow first next "></span>
+        <span class="arrow second next "></span>
+      </div>
+    </div>
+    <h6 class="scroll">Scroll</h6>
+  </div>
+
 </body>
 <script src="/js/scroll-arrow.js"></script>
 <!--<script src="/js/sticky_nav.js"></script>-->
