--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -16,10 +16,9 @@
 </head>
 
 <body>
-  <div class="glitch-wrapper">
-    <!-- <div class="glitch" data-text="PROJECTS">PROJECTS</div> -->
-
-  </div>
+  <!-- <div class="glitch-wrapper">
+    <div class="glitch" data-text="PROJECTS">PROJECTS</div>
+  </div> -->
 
   <div>
     <!-- <div class="above-nav"></div> -->
@@ -62,7 +61,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top" href="projects/perceptiveDatascapes.html">Perceptive Datascapes</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/perceptiveDatascapes.html" index=1>Perceptive Datascapes</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -89,7 +88,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top" href="projects/">Rawbot</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/" index=2>Rawbot</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -117,7 +116,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top" href="projects/">Swapper</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/" index=3>Swapper</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -145,7 +144,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top" href="projects/">Urban Growth</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/" index=4>Urban Growth</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
@@ -171,6 +170,11 @@
     <a class="" href="projects/">Urban Growth</a>
   </div> -->
  
+  <div class="counter">
+    <h6 id="current-project">1</h6>
+    <hr id="divider" class="divider">
+    <h6 >5</h6>
+  </div>
 
   <div class="footer">
     <div class="scroll-arrow">
@@ -179,7 +183,7 @@
         <span class="arrow second next "></span>
       </div>
     </div>
-    <h6>Scroll</h6>
+    <h6 class="scroll">Scroll</h6>
   </div>
 
 
