--- a/DecodeCollective/contact.html
+++ b/DecodeCollective/contact.html
@@ -43,7 +43,7 @@
       <div class="navParent">
         <div class="navbar">
           <div class="logo">
-            <a href="Index.html" class="shadow-pop-tr">
+            <a href="Index.html" >
               <img src="images/logo/decod_button.png" alt="logo">
             </a>
           </div>
