--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -15,7 +15,7 @@
  
 </head>
 
-<body>
+<body class="body-restriction">
   <!-- <div class="glitch-wrapper">
     <div class="glitch" data-text="PROJECTS">PROJECTS</div>
   </div> -->
@@ -25,7 +25,7 @@
     <div class="navParent">
       <div class="navbar">
         <div class="logo">
-          <a href="Index.html" class="shadow-pop-tr">
+          <a href="Index.html" >
             <img src="images/logo/decod_button.png" alt="logo">
           </a>
         </div>
