--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -2,22 +2,102 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Decode Collective</title>
-  <link rel="icon" type="image/png" href="images/logo/decod_button.png" sizes="128x128">
-  <meta name="description" content="Design for fabrication and project automation">
+    <meta charset="utf-8">
+    <title>Decode Collective</title>
+    <link rel="icon" type="image/png" href="../images/logo/decod_button.png" sizes="128x128">
+    <meta name="description" content="Design for fabrication and project automation">
 
-  <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="styles/Style.css">
+    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="../styles/Style.css">
 
-  <!-- Fonts --> 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
- 
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
+    <!-- Navigation-->
+    <div>
+        <div class="navParent">
+            <div class="navbar">
+                <div class="logo">
+                    <a href="Index.html">
+                        <img src="../images/logo/decod_button.png" alt="logo">
+                    </a>
+                </div>
+                <nav class="menu" id="siteNav">
+                    <ul>
+                        <li><a href="../projects.html">Projects.</a></li>
+                        <li><a href="../about.html">About.</a></li>
+                        <li><a href="../contact.html">Contact.</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
 
+    <section class="central-container project-wallpaper" id="pc-wallpaper">
+        <h2>Geospatial Analytics To Data Driven Design</h2>
+    </section>
+    <section class="project-description project-wallpaper">
+        <div class="grid-heading">
+            <h1>Perceptive Datascapes</h1>
+        </div>
+        <div class="grid-body">
+            <p>This research reflects upon principles of physical connectivity and visual perception as the means to
+                evaluate
+                and generate new spatial configurations for contemporary urban systems. The aim is to explore the
+                possibility of
+                constructing a computational analytic model, termed “Perceptive Machine”, which could function as an
+                additional
+                layer in the design process by mining, analysing and visualising geo-spatial data in a virtual 3D space.
+                This system helps in the creation of new topographies which encourage the interplay between human and
+                inhuman intelligence in an environment of hybrid cyberspace. Hypervirtuality,
+                the analysis and evaluation of a set of multidimensional continuous data in Virtual Reality could
+                challenge the way people perceive the urban fabric. This immersive space that mixes real and virtual
+                offers the necessary ground for this analytic workflow to expand beyond computation into a gradient of
+                experiences.
+            </p>
+        </div>
+        <div class="grid-index">
+            <h5>KEYWORDS</h5>
+            <h5>Urban Analytics</h5>
+            <h5>Visual Perception</h5>
+            <h5>VR development</h5>
+            <h5>Data Driven Design</h5>
+            <h5>Machine Learning</h5>
+        </div>
+    </section>
 
+    <section class="grid-images">
+        <div class="grid-images-left">
+            <img src="../images/perceptiveDatascapes/pctop.png">
+            <img src="../images/perceptiveDatascapes/pctop.png">
+        </div>
+        <div class="grid-images-right"></div>
+    </section>
+
+    <section>
+        <video autoplay muted loop  id="vr-video">
+            <source src="../images/perceptiveDatascapes/vrVideo2.mp4" type="video/mp4">
+        </video>
+    </section>
+
+    <div class="project-title">
+        <span class="hor-line"></span>
+        <h6 class="scroll project-subtitle">Perceptive Datascapes</h6>
+    </div>
+
+    <div class="footer">
+        <div class="scroll-arrow">
+            <div id="cta">
+                <span class="arrow first next "></span>
+                <span class="arrow second next "></span>
+            </div>
+        </div>
+        <h6 class="scroll">Scroll</h6>
+    </div>
 
     <!-- ----------------- SCRIPTS ----------------- -->
 </body>
