--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -69,15 +69,30 @@
             <h5>Machine Learning</h5>
         </div>
     </section>
-
-    <section class="grid-images">
+    <!------- IMAGE GRID ------>
+    <div class="grid-images">
+        <div class="grid-images-background-up"></div>
+        <div class="grid-images-background-down"></div>
         <div class="grid-images-left">
-            <img src="../images/perceptiveDatascapes/pctop.png">
-            <img src="../images/perceptiveDatascapes/pctop.png">
+            <div id="pc-grid"></div>          
         </div>
-        <div class="grid-images-right"></div>
-    </section>
+        <div class="grid-images-right">
+            <div id="pc-grid"></div>
+        </div>        
+    </div>
+    <div class="grid-images">
+        <div class="grid-images-background-up"></div>
+        <div class="grid-images-background-down-w"></div>
+        <div class="grid-images-left">
+            <div id="pc-grid"></div>            
+        </div>
+        <div class="grid-images-right">
+            <div id="pc-grid"></div>
+        </div>        
+    </div>
+    <!--end of image grid-->
 
+    <!------- VIDEO ------>
     <section>
         <video autoplay muted loop  id="vr-video">
             <source src="../images/perceptiveDatascapes/vrVideo2.mp4" type="video/mp4">
