project layout bottom

--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -38,7 +38,7 @@
     </div>
 
     <section class="central-container project-wallpaper" id="pc-wallpaper">
-        <h2>Geospatial Analytics To Data Driven Design</h2>
+        <h2 class="fade-in">Geospatial Analytics To Data Driven Design</h2>
     </section>
     <section class="project-description project-wallpaper">
         <div class="grid-heading">
@@ -81,7 +81,7 @@
         </div>        
     </div>
     <div class="grid-images">
-        <div class="grid-images-background-up"></div>
+        <div class="grid-images-background-down"></div>
         <div class="grid-images-background-down-w"></div>
         <div class="grid-images-left">
             <div id="pc-grid"></div>            
@@ -99,12 +99,17 @@
         </video>
     </section>
 
+    <!------- FULLSCREEN IMAGE ------>
+    <section id="pc-full-image">        
+    </section>
+
+    
     <div class="project-title">
         <span class="hor-line"></span>
         <h6 class="scroll project-subtitle">Perceptive Datascapes</h6>
     </div>
 
-    <div class="footer">
+    <!-- <div class="footer">
         <div class="scroll-arrow">
             <div id="cta">
                 <span class="arrow first next "></span>
@@ -112,9 +117,15 @@
             </div>
         </div>
         <h6 class="scroll">Scroll</h6>
+    </div> -->
+
+    <div class="next-project-gap"></div>
+    <div class="next-project ">
+        <a href="../projects.html">Next Project</a>
     </div>
 
     <!-- ----------------- SCRIPTS ----------------- -->
+   
 </body>
 
 
