--- a/DecodeCollective/projects.html
+++ b/DecodeCollective/projects.html
@@ -144,7 +144,7 @@
         </div>
         <div class="project-container-grid-top"></div>
         <div class="project-container-grid-mid">
-          <a class="project-button slide-top show-on-scroll" href="projects/" index=4>Urban Growth</a>
+          <a class="project-button slide-top show-on-scroll" href="projects/urbanGrowth.html" index=4>Urban Growth</a>
         </div>
         <div class="project-container-grid-bottom">
           <span class="hor-line"></span>
