--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -102,7 +102,8 @@
     <!------- FULLSCREEN IMAGE ------>
     <section id="pc-full-image">        
     </section>
-
+    <section id="pc-full-image1">        
+    </section>
     
     <div class="project-title">
         <span class="hor-line"></span>
