--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -32,7 +32,7 @@
               <ul>
                 <!-- <li><a href="Index.html">Home</a></li> -->
                 <li><a href="projects.html">Projects.</a></li>
-                <li><a href="projects.html">About.</a></li>
+                <li><a href="about.html">About.</a></li>
                 <li><a href="contact.html">Contact.</a></li>
               </ul>
             </nav>
@@ -52,11 +52,10 @@
       <div class="generic-wrapper second-wrapper">
         <div class="mid-grid">
           <h1>Slogan</h1>
-          <a class="btns" href="/about.html">More info about the team</a>
-        </div>
-        <div class="bottom-grid">
-          <a class="arrow-btn" href="#projects"><span class="arrow-down"></span>Scroll</a>
-        </div>
+          <button class="btn btn-3" onclick="window.location.href ='/about.html'">
+            <span>About the team.</span>
+          </button>
+        </div>        
       </div>
     </section>
 
@@ -68,11 +67,10 @@
       <div class="generic-wrapper third-wrapper">
         <div class="mid-grid">
           <h1>Projects</h1>
-          <a class="btns" href="/projects.html">Find more about our work</a>
-        </div>
-        <div class="bottom-grid">
-          <a class="arrow-btn" href="#Contact"><span class="arrow-down"></span>Scroll</a>
-        </div>
+          <button class="btn btn-3" onclick="window.location.href ='/projects.html'">
+            <span>More of our Work.</span>
+          </button>
+        </div>        
       </div>
     </section>
 
@@ -81,7 +79,9 @@
       <div class="generic-wrapper fourth-wrapper">
         <div class="mid-grid">
           <h1>Contact<h1>
-              <a class="btns" href="/contact.html">Talk to us</a>
+            <button class="btn btn-3" onclick="window.location.href ='/contact.html'">
+              <span>Contact us.</span>
+            </button>
         </div>
     </section>
 
