--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -110,6 +110,17 @@
         <h6 class="scroll project-subtitle">Perceptive Datascapes</h6>
     </div>
 
+     <!------- HALFSCREEN IMAGE ------>
+     <section >        
+         <div class="offset-image" id="pc-offset-image"> </div>
+    </section>
+   
+    
+    <div class="project-title">
+        <span class="hor-line"></span>
+        <h6 class="scroll project-subtitle">Perceptive Datascapes</h6>
+    </div>
+
     <!-- <div class="footer">
         <div class="scroll-arrow">
             <div id="cta">
