--- a/DecodeCollective/projects/urbanGrowth.html
+++ b/DecodeCollective/projects/urbanGrowth.html
@@ -96,17 +96,22 @@
     </div>
     <!--end of image grid-->
 
+    <div class="free-space"></div>
+    
     <!------- VIDEO ------>
-    <section>
+    <section class="light-background">
         <video autoplay muted loop id="vr-video">
             <source src="../images/urbanGrowth/videos/Cellular Automata.mp4" type="video/mp4">
         </video>
     </section>
 
+    <div class="free-space"></div>
+
     <!------- FULLSCREEN IMAGE ------>
-    <section id="ug-full-image">
+    <section class="light-background" id="ug-full-image">
     </section>
 
+    <div class="free-space"></div>
 
     <div class="project-title">
         <span class="hor-line"></span>
