fixed box animation bug + scroll arrow

--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -78,7 +78,7 @@
     <section class="scroll-item" id="contact" data-title="Contact">
       <div class="generic-wrapper fourth-wrapper">
         <div class="mid-grid">
-          <h1>Contact<h1>
+          <h1>Contact</h1>
             <button class="btn btn-3" onclick="window.location.href ='/contact.html'">
               <span>Contact us.</span>
             </button>
