--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -76,8 +76,13 @@
 
     <!-- Contact section -->
     <section class="scroll-item" id="contact" data-title="Contact">
-      <div class="generic-wrapper fourth-wrapper">
-        <div class="mid-grid">
+     
+      <video autoplay muted loop style="object-fit: cover; z-index: -1;">
+        <source src="/material/mesh_face/faces.mp4" type="video/mp4"></source>
+      </video>
+
+      <div class="generic-wrapper fourth-wrapper">        
+        <div class="mid-grid">  
           <h1>Contact</h1>
             <button class="btn btn-3" onclick="window.location.href ='/contact.html'">
               <span>Contact us.</span>
