--- a/DecodeCollective/projects/perceptiveDatascapes.html
+++ b/DecodeCollective/projects/perceptiveDatascapes.html
@@ -93,12 +93,16 @@
     </div>
     <!--end of image grid-->
 
+    <div class="free-space dark-background"></div>
+
     <!------- VIDEO ------>
     <section>
         <video autoplay muted loop  id="vr-video">
-            <source src="../images/perceptiveDatascapes/videos/PatternsOptimisation.avi" type="video/mp4">
+            <source src="../images/perceptiveDatascapes/videos/evaluation.mp4" type="video/mp4">
         </video>
     </section>
+
+    <div class="free-space dark-background"></div> 
 
     <!------- FULLSCREEN IMAGE ------>   
     <section id="pc-full-image1">        
@@ -106,14 +110,20 @@
 
     <section>
         <video autoplay muted loop  id="vr-video">
-            <source src="../images/perceptiveDatascapes/vrVideo2.mp4" type="video/mp4">
+            <source src="../images/perceptiveDatascapes/videos/evaluation.mp4" type="video/mp4">
         </video>
     </section>
     
+    <div class="free-space dark-background"></div>
+
      <!------- HALFSCREEN IMAGE ------>
-     <section >        
+     <section class="central-container">        
          <div class="offset-image" id="pc-offset-image"> </div>
     </section>
+
+    <div class="free-space dark-background"></div>
+
+
     <section id="pc-full-image">        
     </section>
     
