--- a/DecodeCollective/projects/urbanGrowth.html
+++ b/DecodeCollective/projects/urbanGrowth.html
@@ -22,7 +22,7 @@
         <div class="navParent">
             <div class="navbar">
                 <div class="logo">
-                    <a href="Index.html">
+                    <a href="../Index.html">
                         <img src="../images/logo/decod_button.png" alt="logo">
                     </a>
                 </div>
