--- a/DecodeCollective/projects/urbanGrowth.html
+++ b/DecodeCollective/projects/urbanGrowth.html
@@ -9,6 +9,7 @@
 
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../styles/Style.css">
+    <link rel="stylesheet" href="../styles/projectSpecific.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
