--- a/DecodeCollective/projects/urbanGrowth.html
+++ b/DecodeCollective/projects/urbanGrowth.html
@@ -112,6 +112,9 @@
     <section class="light-background" id="ug-full-image">
     </section>
 
+    <section class="light-background" id="ug-full-image1">
+    </section>
+
     <div class="free-space"></div>
 
     <div class="project-title">
