--- a/DecodeCollective/Index.html
+++ b/DecodeCollective/Index.html
@@ -77,7 +77,23 @@
     <!-- Projects Section -->
 
     <section class="scroll-item" id="projects" data-title="Projects">
-      <div class="generic-wrapper third-wrapper">
+      <div class="generic-wrapper">
+
+        <div class="full-grid" id="slideshow">
+          <div class="sli-child">
+            <img src="/images/landingPage/slideshow/IMG_0739.JPG">
+          </div>
+          <div class="sli-child">
+            <img src="/images/landingPage/slideshow/IMG_0381.JPG">
+          </div>
+          <div class="sli-child">
+            <img src="/images/landingPage/slideshow/8_1.jpg">
+          </div>
+          <div class="sli-child">
+            <img src="/images/landingPage/slideshow/2.jpg">
+          </div>
+      </div>
+
         <div class="mid-grid">
           <h1>Projects</h1>
           <button class="btn btn-3" onclick="window.location.href ='/projects.html'">
@@ -120,7 +136,10 @@
   </div>
 
 </body>
-<script src="/js/scroll-arrow.js"></script>
+<script type="text/javascript" defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script  type="text/javascript" defer src="/js/scroll-arrow.js"></script>
+<script  type="text/javascript" defer src="/js/slideshow.js"></script>
+
 <!--<script src="/js/sticky_nav.js"></script>-->
 
 </html>
